# notifier

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
crates/notifier-core/: Cargo.toml
crates/notifier-core/src/: channel.rs  error.rs  lib.rs  message.rs  result.rs  util.rs
crates/notifier-dingtalk/: Cargo.toml
crates/notifier-dingtalk/src/: config.rs  lib.rs  send.rs  signing.rs  tests.rs
crates/notifier-email/: Cargo.toml
crates/notifier-email/src/: config.rs  lib.rs  message.rs  send.rs  tests.rs  transport.rs
crates/notifier-ntfy/: Cargo.toml
crates/notifier-ntfy/src/: config.rs  lib.rs  send.rs  tests.rs
crates/notifier-webhook/: Cargo.toml
crates/notifier-webhook/src/: config.rs  lib.rs  send.rs  tests.rs
src/: lib.rs
