[package]
name = "cloudiful-notifier"
version = "0.2.1"
edition.workspace = true
license.workspace = true
description = "Async notification delivery library for ntfy, generic webhooks, and DingTalk robots."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["notification", "webhook", "ntfy", "dingtalk"]
categories = ["asynchronous", "web-programming::http-client"]
publish = ["crates-io"]

[workspace]
members = [
    "crates/notifier-core",
    "crates/notifier-ntfy",
    "crates/notifier-webhook",
    "crates/notifier-dingtalk",
    "crates/notifier-email",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cloudiful/notifier"
homepage = "https://github.com/cloudiful/notifier"
documentation = "https://docs.rs/cloudiful-notifier"

[workspace.dependencies]
base64 = "0.22.1"
hmac = "0.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "ring", "webpki-roots"] }

[lib]
name = "cloudiful_notifier"

[features]
default = ["ntfy", "webhook", "dingtalk", "email"]
ntfy = ["dep:cloudiful-notifier-ntfy"]
webhook = ["dep:cloudiful-notifier-webhook"]
dingtalk = ["dep:cloudiful-notifier-dingtalk"]
email = ["dep:cloudiful-notifier-email"]

[dependencies]
reqwest.workspace = true
cloudiful-notifier-core = { path = "crates/notifier-core", version = "0.2.0" }
cloudiful-notifier-ntfy = { path = "crates/notifier-ntfy", version = "0.2.0", optional = true }
cloudiful-notifier-webhook = { path = "crates/notifier-webhook", version = "0.2.0", optional = true }
cloudiful-notifier-dingtalk = { path = "crates/notifier-dingtalk", version = "0.2.0", optional = true }
cloudiful-notifier-email = { path = "crates/notifier-email", version = "0.2.0", optional = true }

[dev-dependencies]
tokio.workspace = true
