[package]
name = "cloudiful-notifier-dingtalk"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cloudiful-notifier-dingtalk"
description = "DingTalk provider for cloudiful-notifier."

[dependencies]
base64.workspace = true
cloudiful-notifier-core = { path = "../notifier-core", version = "0.2.0" }
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tokio.workspace = true
