[package]
name = "cloudiful-notifier-ntfy"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cloudiful-notifier-ntfy"
description = "ntfy provider for cloudiful-notifier."

[dependencies]
cloudiful-notifier-core = { path = "../notifier-core", version = "0.2.0" }
reqwest.workspace = true
serde.workspace = true

[dev-dependencies]
tokio.workspace = true
